--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>hey how are you i think u r good home
+    <h1>hey how are you i think u r good
     </h1>
     <script src="script.js"></script>
 </body>
